[package]
name = "unicode-bidi"
version = "0.3.0"
authors = ["The Servo Project Developers"]
license = "MIT / Apache-2.0"
description = "Implementation of the Unicode Bidirectional Algorithm"
repository = "https://github.com/servo/unicode-bidi"
documentation = "http://doc.servo.org/unicode_bidi/"
keywords = ["rtl", "unicode", "text", "layout", "bidi"]

exclude = ["*.txt"]

[lib]
name = "unicode_bidi"

[dependencies]
matches = "0.1"
serde = "0.9"
serde_derive = "0.9"
