[package]
name = "unicode-bidi"
version = "0.3.5"
authors = ["The Servo Project Developers"]
license = "MIT / Apache-2.0"
description = "Implementation of the Unicode Bidirectional Algorithm"
repository = "https://github.com/servo/unicode-bidi"
documentation = "https://docs.rs/unicode-bidi/"
keywords = ["rtl", "unicode", "text", "layout", "bidi"]
readme="README.md"
edition = "2018"

# No data is shipped; benches, examples and tests also depend on data.
exclude = [
    "benches/**",
    "data/**",
    "examples/**",
    "tests/**",
    "tools/**",
]

[badges]
travis-ci = { repository = "servo/unicode-bidi" }
appveyor = { repository = "servo/unicode-bidi" }

[lib]
name = "unicode_bidi"

[dependencies]
flame = { version = "0.2", optional = true }
flamer = { version = "0.4", optional = true }
matches = "0.1"
serde = { version = ">=0.8, <2.0", optional = true, features = ["derive"] }

[dev-dependencies]
serde_test = ">=0.8, <2.0"

[features]
default = []
unstable = []  # travis-cargo needs it
bench_it = []
flame_it = ["flame", "flamer"]
with_serde = ["serde"]  # DEPRECATED, please use `serde` feature, instead.
